HTML PAGE SETUP

--- a/main/index.html
+++ b/main/index.html
@@ -8,6 +8,60 @@
     <title>AnnexBios | Montfoort</title>
 </head>
 <body>
+    <header>
+        <div class="container">
+            <div class="logo">
+                <img src="assets/img/logo/logo_hoofd.png" alt="logo">
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="index.html">FILM AGENDA</a></li>
+                    <li><a href="about.html">ALLE VESTIGINGEN</a></li>
+                    <li><a href="contact.html">CONTACT</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <section class="banner">
+        <div class="container">
+            <div class="banner-text">
+                <h1>AnnexBios</h1>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquid consequuntur fugiat debitis sit possimus itaque iste nihil explicabo nam dignissimos ullam, nostrum velit amet! Dolor perspiciatis reiciendis sunt rem! Aliquid!</p>
+                <a href="about.html" class="btn">Read More</a>
+            </div>
+        </div>
+    </section>
+    <section class="welcome">
+        <div class="container">
+            <h1>WELKOM BIJ ANNEXBIOS 5</h1>
+            <div class="welcome-box">
+                <div class="box">
+                    <img src="assets/img/box1.png" alt="box1">
+                    <h3>BEKIJK DE DRAAIENDE FILMS</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facere totam minima in laborum ad eos dignissimos corrupti aliquid! Autem dolorem minima praesentium quaerat perferendis tempore a perspiciatis soluta esse deserunt?</p>
+                </div>
+                <div class="box">
+                    <img src="assets/img/box2.png" alt="box2">
+                    <h3>Product Development</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque ducimus fugit vel soluta consequuntur quia similique! Iusto quos odio incidunt esse? Illum reiciendis dignissimos consequatur illo expedita ipsum neque! Ut.</p>
+                </div>
+                <div class="box">
+                    <img src="assets/img/box3.png" alt="box3">
+                    <h3>Product Development</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quisquam, fugit enim possimus asperiores eveniet natus nesciunt. Dolorum reiciendis sapiente totam velit. Consequuntur beatae, laboriosam voluptates reiciendis minus quibusdam architecto unde!</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="contact">
+        <div class="container">
+            <h1>Contact Us</h1>
+            <div class="contact-box">
+                <div class="contact-info">
+                    <div class="box">
+                        <div class="icon">
+                            <img src="assets/img/location.png" alt="location">
+<body>
     
 </body>
 </html>
