--- a/main/index.html
+++ b/main/index.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=
     , initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <title>AnnexBios | Montfoort</title>
+    <link rel="stylesheet" href="../main/assets/css/style.css">
 </head>
 <body>
+
     <header>
         <div class="container">
             <div class="logo">
@@ -23,31 +24,34 @@
             </nav>
         </div>
     </header>
-    <section class="banner">
-        <div class="container">
-            <div class="banner-text">
-                <h1>AnnexBios</h1>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquid consequuntur fugiat debitis sit possimus itaque iste nihil explicabo nam dignissimos ullam, nostrum velit amet! Dolor perspiciatis reiciendis sunt rem! Aliquid!</p>
-                <a href="about.html" class="btn">Read More</a>
-            </div>
+
+    <div class="dropdown">
+        <button onclick="myFunction()" class="dropbtn">Kies je film</button>
+        <div id="myDropdown" class="dropdown-content">
+          <a href="#">JURASSIC WORLD: FALLEN KINGDOM </a>
+          <a href="#">DEADPOOL 2</a>
+          <a href="#">SOLO: A STAR WARS STORY</a>
+          <a href="#">PIETER KONIJN</a>
         </div>
-    </section>
+      </div>
+
+
+
     <section class="welcome">
         <div class="container">
-            <h1>WELKOM BIJ ANNEXBIOS 5</h1>
-            <div class="welcome-box">
+            <h1>WELKOM BIJ ANNEXBIOS MONTFOORT</h1>
+            <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias exercitationem veniam modi accusamus labore eveniet laborum optio explicabo qui nihil, quidem reprehenderit fugit amet cupiditate, tempore architecto porro natus molestiae?</h2>
+            <a href="pages/agenda.html" class="btn">BEKIJK DE DRAAIENDE FILMS</a>
+
+
                 <div class="box">
-                    <img src="assets/img/box1.png" alt="box1">
-                    <h3>BEKIJK DE DRAAIENDE FILMS</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facere totam minima in laborum ad eos dignissimos corrupti aliquid! Autem dolorem minima praesentium quaerat perferendis tempore a perspiciatis soluta esse deserunt?</p>
-                </div>
-                <div class="box">
-                    <img src="assets/img/box2.png" alt="box2">
-                    <h3>Product Development</h3>
+                    <img src="assets/img/header/Hellevoetssluis.png" alt="">
+                <!-- locatie-->    <h3>Rijksstraatweg 423223 KA Hellevoetsluis</h3>
+                <!-- telefoonnummer-->    <h3>0181- 61 61 61</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque ducimus fugit vel soluta consequuntur quia similique! Iusto quos odio incidunt esse? Illum reiciendis dignissimos consequatur illo expedita ipsum neque! Ut.</p>
                 </div>
-                <div class="box">
-                    <img src="assets/img/box3.png" alt="box3">
+                <div class="box2">
+                    <img src="" alt="">
                     <h3>Product Development</h3>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quisquam, fugit enim possimus asperiores eveniet natus nesciunt. Dolorum reiciendis sapiente totam velit. Consequuntur beatae, laboriosam voluptates reiciendis minus quibusdam architecto unde!</p>
                 </div>
@@ -64,4 +68,5 @@
                             <img src="assets/img/location.png" alt="location">
 <body>    
 </body>
+<script src="assets/js/script.js"></script>
 </html>
