--- a/main/index.html
+++ b/main/index.html
@@ -17,15 +17,16 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href="index.html">FILM AGENDA</a></li>
-                    <li><a href="about.html">ALLE VESTIGINGEN</a></li>
-                    <li><a href="contact.html">CONTACT</a></li>
+                    <li><a href="pages/agenda.html">FILM AGENDA</a></li>
+                    <li><a href="pages/all.html">ALLE VESTIGINGEN</a></li>
+                    <li><a href="pages/contact.html">CONTACT</a></li>
                 </ul>
             </nav>
         </div>
     </header>
 
     <div class="dropdown">
+        <h2>KOOP JE TICKETS</h2>
         <button onclick="myFunction()" class="dropbtn">Kies je film</button>
         <div id="myDropdown" class="dropdown-content">
           <a href="#">JURASSIC WORLD: FALLEN KINGDOM </a>
@@ -33,29 +34,31 @@
           <a href="#">SOLO: A STAR WARS STORY</a>
           <a href="#">PIETER KONIJN</a>
         </div>
+        <button><h2>BESTEL TICKETS</h2></button>
       </div>
 
 
 
+      </div>
     <section class="welcome">
         <div class="container">
             <h1>WELKOM BIJ ANNEXBIOS MONTFOORT</h1>
             <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias exercitationem veniam modi accusamus labore eveniet laborum optio explicabo qui nihil, quidem reprehenderit fugit amet cupiditate, tempore architecto porro natus molestiae?</h2>
             <a href="pages/agenda.html" class="btn">BEKIJK DE DRAAIENDE FILMS</a>
-
+            <div class="background">
+                <img src="assets/img/header/header_afbeelding.jpg" alt="">
+        </div>
 
                 <div class="box">
-                    <img src="assets/img/header/Hellevoetssluis.png" alt="">
+                    <img src="assets/img/maps/maps.png" alt="">
                 <!-- locatie-->    <h3>Rijksstraatweg 423223 KA Hellevoetsluis</h3>
                 <!-- telefoonnummer-->    <h3>0181- 61 61 61</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque ducimus fugit vel soluta consequuntur quia similique! Iusto quos odio incidunt esse? Illum reiciendis dignissimos consequatur illo expedita ipsum neque! Ut.</p>
+                    <p>BEREIKBAARHEID Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque ducimus fugit vel soluta consequuntur quia similique! Iusto quos odio incidunt esse? Illum reiciendis dignissimos consequatur illo expedita ipsum neque! Ut.</p>
                 </div>
-                <div class="box2">
-                    <img src="" alt="">
-                    <h3>Product Development</h3>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quisquam, fugit enim possimus asperiores eveniet natus nesciunt. Dolorum reiciendis sapiente totam velit. Consequuntur beatae, laboriosam voluptates reiciendis minus quibusdam architecto unde!</p>
+                <div class="box2"> <!--tivoli foto-->
+                    <img src="assets/img/header/Hellevoetssluis.png">
                 </div>
-            </div>
+            
         </div>
     </section>
     <section class="contact">
